// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`EventBus — golden master > awardConferred 1`] = `
{
  "event": {
    "category": "basho",
    "causalEventId": undefined,
    "data": {
      "day": 8,
      "east": "Eastho",
      "eastRikishiId": "r-east",
      "heat": 80,
      "heyaname": undefined,
      "incident": "scandal",
      "loser": "Westzan",
      "loserRikishiId": "r-west",
      "rikishiId": "r-east",
      "shikona": "Eastho",
      "status": "gino-sho",
      "west": "Westzan",
      "westRikishiId": "r-west",
      "winner": "Eastho",
      "winnerRikishiId": "r-east",
    },
    "day": 1,
    "heyaId": undefined,
    "id": "EV-69322DC9",
    "importance": "headline",
    "month": 1,
    "phase": "basho_wrap",
    "rikishiId": "r-east",
    "scope": "rikishi",
    "summary": "Honors were bestowed on [[rikishi:r-east:Eastho]] in a brief ceremony.",
    "tags": [
      "basho",
      "award",
    ],
    "title": "Award Conferred",
    "type": "AWARD_CONFERRED",
    "week": 5,
    "year": 2026,
  },
  "logLen": 1,
  "logTail": [
    {
      "category": "basho",
      "causalEventId": undefined,
      "data": {
        "day": 8,
        "east": "Eastho",
        "eastRikishiId": "r-east",
        "heat": 80,
        "heyaname": undefined,
        "incident": "scandal",
        "loser": "Westzan",
        "loserRikishiId": "r-west",
        "rikishiId": "r-east",
        "shikona": "Eastho",
        "status": "gino-sho",
        "west": "Westzan",
        "westRikishiId": "r-west",
        "winner": "Eastho",
        "winnerRikishiId": "r-east",
      },
      "day": 1,
      "heyaId": undefined,
      "id": "EV-69322DC9",
      "importance": "headline",
      "month": 1,
      "phase": "basho_wrap",
      "rikishiId": "r-east",
      "scope": "rikishi",
      "summary": "Honors were bestowed on [[rikishi:r-east:Eastho]] in a brief ceremony.",
      "tags": [
        "basho",
        "award",
      ],
      "title": "Award Conferred",
      "type": "AWARD_CONFERRED",
      "week": 5,
      "year": 2026,
    },
  ],
}
`;

exports[`EventBus — golden master > bashoStatus (mid-day + headline day-15) 1`] = `
{
  "event": [
    {
      "category": "basho",
      "causalEventId": undefined,
      "data": {
        "day": 8,
        "east": "Eastho",
        "eastRikishiId": "r-east",
        "heat": 80,
        "heyaname": undefined,
        "incident": "scandal",
        "loser": "Westzan",
        "loserRikishiId": "r-west",
        "rikishiId": "r-east",
        "shikona": "Eastho",
        "status": "day_update",
        "west": "Westzan",
        "westRikishiId": "r-west",
        "winner": "Eastho",
        "winnerRikishiId": "r-east",
      },
      "day": 1,
      "heyaId": undefined,
      "id": "EV-625DB651",
      "importance": "notable",
      "month": 1,
      "phase": "basho_day",
      "rikishiId": undefined,
      "scope": "world",
      "summary": "Basho Update: [[rikishi:r-east:Eastho]] is [MISSING: WINS]-[MISSING: LOSSES] after a crucial day of action.",
      "tags": [
        "basho",
        "day_update",
      ],
      "title": "Tournament News",
      "type": "BASHO_STATUS",
      "week": 5,
      "year": 2026,
    },
    {
      "category": "basho",
      "causalEventId": undefined,
      "data": {
        "day": 8,
        "east": "Eastho",
        "eastRikishiId": "r-east",
        "heat": 80,
        "heyaname": undefined,
        "incident": "scandal",
        "loser": "Westzan",
        "loserRikishiId": "r-west",
        "rikishiId": "r-east",
        "shikona": "Eastho",
        "status": "day_update",
        "west": "Westzan",
        "westRikishiId": "r-west",
        "winner": "Eastho",
        "winnerRikishiId": "r-east",
      },
      "day": 1,
      "heyaId": undefined,
      "id": "EV-625DB651",
      "importance": "notable",
      "month": 1,
      "phase": "basho_day",
      "rikishiId": undefined,
      "scope": "world",
      "summary": "Basho Update: [[rikishi:r-east:Eastho]] is [MISSING: WINS]-[MISSING: LOSSES] after a crucial day of action.",
      "tags": [
        "basho",
        "day_update",
      ],
      "title": "Tournament News",
      "type": "BASHO_STATUS",
      "week": 5,
      "year": 2026,
    },
  ],
  "logLen": 1,
  "logTail": [
    {
      "category": "basho",
      "causalEventId": undefined,
      "data": {
        "day": 8,
        "east": "Eastho",
        "eastRikishiId": "r-east",
        "heat": 80,
        "heyaname": undefined,
        "incident": "scandal",
        "loser": "Westzan",
        "loserRikishiId": "r-west",
        "rikishiId": "r-east",
        "shikona": "Eastho",
        "status": "day_update",
        "west": "Westzan",
        "westRikishiId": "r-west",
        "winner": "Eastho",
        "winnerRikishiId": "r-east",
      },
      "day": 1,
      "heyaId": undefined,
      "id": "EV-625DB651",
      "importance": "notable",
      "month": 1,
      "phase": "basho_day",
      "rikishiId": undefined,
      "scope": "world",
      "summary": "Basho Update: [[rikishi:r-east:Eastho]] is [MISSING: WINS]-[MISSING: LOSSES] after a crucial day of action.",
      "tags": [
        "basho",
        "day_update",
      ],
      "title": "Tournament News",
      "type": "BASHO_STATUS",
      "week": 5,
      "year": 2026,
    },
  ],
}
`;

exports[`EventBus — golden master > boutResolved (normal + kinboshi headline) 1`] = `
{
  "event": [
    {
      "category": "basho",
      "causalEventId": undefined,
      "data": {
        "day": 8,
        "east": "Eastho",
        "eastRikishiId": "r-east",
        "heat": 80,
        "heyaname": undefined,
        "incident": "scandal",
        "loser": "Westzan",
        "loserId": "r-west",
        "loserRikishiId": "r-west",
        "rikishiId": "r-east",
        "shikona": "Eastho",
        "status": "injured",
        "west": "Westzan",
        "westRikishiId": "r-west",
        "winner": "Eastho",
        "winnerId": "r-east",
        "winnerRikishiId": "r-east",
      },
      "day": 1,
      "heyaId": undefined,
      "id": "EV-7E53CE20",
      "importance": "notable",
      "month": 1,
      "phase": "basho_day",
      "rikishiId": undefined,
      "scope": "world",
      "summary": "The bout concludes with [[rikishi:r-east:Eastho]] executing a clean [MISSING: KIMARITE].",
      "tags": [
        "basho",
        "bout",
        "pbp",
      ],
      "title": "Victory for [[rikishi:r-east:Eastho]]",
      "type": "BOUT_RESOLVED",
      "week": 5,
      "year": 2026,
    },
    {
      "category": "basho",
      "causalEventId": undefined,
      "data": {
        "day": 8,
        "east": "Eastho",
        "eastRikishiId": "r-east",
        "heat": 80,
        "heyaname": undefined,
        "incident": "scandal",
        "loser": "Westzan",
        "loserId": "r-west",
        "loserRikishiId": "r-west",
        "rikishiId": "r-east",
        "shikona": "Eastho",
        "status": "injured",
        "west": "Westzan",
        "westRikishiId": "r-west",
        "winner": "Eastho",
        "winnerId": "r-east",
        "winnerRikishiId": "r-east",
      },
      "day": 1,
      "heyaId": undefined,
      "id": "EV-7E53CE20",
      "importance": "notable",
      "month": 1,
      "phase": "basho_day",
      "rikishiId": undefined,
      "scope": "world",
      "summary": "The bout concludes with [[rikishi:r-east:Eastho]] executing a clean [MISSING: KIMARITE].",
      "tags": [
        "basho",
        "bout",
        "pbp",
      ],
      "title": "Victory for [[rikishi:r-east:Eastho]]",
      "type": "BOUT_RESOLVED",
      "week": 5,
      "year": 2026,
    },
  ],
  "logLen": 1,
  "logTail": [
    {
      "category": "basho",
      "causalEventId": undefined,
      "data": {
        "day": 8,
        "east": "Eastho",
        "eastRikishiId": "r-east",
        "heat": 80,
        "heyaname": undefined,
        "incident": "scandal",
        "loser": "Westzan",
        "loserId": "r-west",
        "loserRikishiId": "r-west",
        "rikishiId": "r-east",
        "shikona": "Eastho",
        "status": "injured",
        "west": "Westzan",
        "westRikishiId": "r-west",
        "winner": "Eastho",
        "winnerId": "r-east",
        "winnerRikishiId": "r-east",
      },
      "day": 1,
      "heyaId": undefined,
      "id": "EV-7E53CE20",
      "importance": "notable",
      "month": 1,
      "phase": "basho_day",
      "rikishiId": undefined,
      "scope": "world",
      "summary": "The bout concludes with [[rikishi:r-east:Eastho]] executing a clean [MISSING: KIMARITE].",
      "tags": [
        "basho",
        "bout",
        "pbp",
      ],
      "title": "Victory for [[rikishi:r-east:Eastho]]",
      "type": "BOUT_RESOLVED",
      "week": 5,
      "year": 2026,
    },
  ],
}
`;

exports[`EventBus — golden master > facilityUpdate (UPGRADED + DEGRADED) 1`] = `
{
  "event": [
    {
      "category": "facility",
      "causalEventId": undefined,
      "data": {
        "day": 8,
        "east": "Eastho",
        "eastRikishiId": "r-east",
        "heat": 80,
        "heya": "East Stable",
        "heyaId": "heya-1",
        "heyaname": "East Stable",
        "incident": "scandal",
        "loser": "Westzan",
        "loserRikishiId": "r-west",
        "rikishiId": "r-east",
        "shikona": "Eastho",
        "stableId": "heya-1",
        "status": "injured",
        "west": "Westzan",
        "westRikishiId": "r-west",
        "winner": "Eastho",
        "winnerRikishiId": "r-east",
      },
      "day": 1,
      "heyaId": "heya-1",
      "id": "EV-5986F244",
      "importance": "notable",
      "month": 1,
      "phase": "weekly",
      "rikishiId": undefined,
      "scope": "heya",
      "summary": "East Stable completed an upgrade to its facilities.",
      "tags": [
        "facility",
        "upgraded",
      ],
      "title": "Facility Upgraded",
      "type": "FACILITY_UPGRADED",
      "week": 5,
      "year": 2026,
    },
    {
      "category": "facility",
      "causalEventId": undefined,
      "data": {
        "day": 8,
        "east": "Eastho",
        "eastRikishiId": "r-east",
        "heat": 80,
        "heya": "East Stable",
        "heyaId": "heya-1",
        "heyaname": "East Stable",
        "incident": "scandal",
        "loser": "Westzan",
        "loserRikishiId": "r-west",
        "rikishiId": "r-east",
        "shikona": "Eastho",
        "stableId": "heya-1",
        "status": "injured",
        "west": "Westzan",
        "westRikishiId": "r-west",
        "winner": "Eastho",
        "winnerRikishiId": "r-east",
      },
      "day": 1,
      "heyaId": "heya-1",
      "id": "EV-A304DFF1",
      "importance": "notable",
      "month": 1,
      "phase": "weekly",
      "rikishiId": undefined,
      "scope": "heya",
      "summary": "Upkeep lapsed at East Stable — the training grounds are wearing down.",
      "tags": [
        "facility",
        "degraded",
      ],
      "title": "Facility Degraded",
      "type": "FACILITY_DEGRADED",
      "week": 5,
      "year": 2026,
    },
  ],
  "logLen": 2,
  "logTail": [
    {
      "category": "facility",
      "causalEventId": undefined,
      "data": {
        "day": 8,
        "east": "Eastho",
        "eastRikishiId": "r-east",
        "heat": 80,
        "heya": "East Stable",
        "heyaId": "heya-1",
        "heyaname": "East Stable",
        "incident": "scandal",
        "loser": "Westzan",
        "loserRikishiId": "r-west",
        "rikishiId": "r-east",
        "shikona": "Eastho",
        "stableId": "heya-1",
        "status": "injured",
        "west": "Westzan",
        "westRikishiId": "r-west",
        "winner": "Eastho",
        "winnerRikishiId": "r-east",
      },
      "day": 1,
      "heyaId": "heya-1",
      "id": "EV-5986F244",
      "importance": "notable",
      "month": 1,
      "phase": "weekly",
      "rikishiId": undefined,
      "scope": "heya",
      "summary": "East Stable completed an upgrade to its facilities.",
      "tags": [
        "facility",
        "upgraded",
      ],
      "title": "Facility Upgraded",
      "type": "FACILITY_UPGRADED",
      "week": 5,
      "year": 2026,
    },
    {
      "category": "facility",
      "causalEventId": undefined,
      "data": {
        "day": 8,
        "east": "Eastho",
        "eastRikishiId": "r-east",
        "heat": 80,
        "heya": "East Stable",
        "heyaId": "heya-1",
        "heyaname": "East Stable",
        "incident": "scandal",
        "loser": "Westzan",
        "loserRikishiId": "r-west",
        "rikishiId": "r-east",
        "shikona": "Eastho",
        "stableId": "heya-1",
        "status": "injured",
        "west": "Westzan",
        "westRikishiId": "r-west",
        "winner": "Eastho",
        "winnerRikishiId": "r-east",
      },
      "day": 1,
      "heyaId": "heya-1",
      "id": "EV-A304DFF1",
      "importance": "notable",
      "month": 1,
      "phase": "weekly",
      "rikishiId": undefined,
      "scope": "heya",
      "summary": "Upkeep lapsed at East Stable — the training grounds are wearing down.",
      "tags": [
        "facility",
        "degraded",
      ],
      "title": "Facility Degraded",
      "type": "FACILITY_DEGRADED",
      "week": 5,
      "year": 2026,
    },
  ],
}
`;

exports[`EventBus — golden master > financialAction (loan + market) 1`] = `
{
  "event": [
    {
      "category": "economy",
      "causalEventId": undefined,
      "data": {
        "day": 8,
        "east": "Eastho",
        "eastRikishiId": "r-east",
        "heat": 80,
        "heya": "East Stable",
        "heyaId": "heya-1",
        "heyaname": "East Stable",
        "incident": "scandal",
        "loser": "Westzan",
        "loserRikishiId": "r-west",
        "rikishiId": "r-east",
        "shikona": "Eastho",
        "stableId": "heya-1",
        "status": "injured",
        "west": "Westzan",
        "westRikishiId": "r-west",
        "winner": "Eastho",
        "winnerRikishiId": "r-east",
      },
      "day": 1,
      "heyaId": "heya-1",
      "id": "EV-E03A2854",
      "importance": "notable",
      "month": 1,
      "phase": "weekly",
      "rikishiId": undefined,
      "scope": "heya",
      "summary": "East Stable processed a loan transaction.",
      "tags": [
        "economy",
        "loan",
      ],
      "title": "Loan Activity",
      "type": "FINANCIAL_ALERT",
      "week": 5,
      "year": 2026,
    },
    {
      "category": "economy",
      "causalEventId": undefined,
      "data": {
        "day": 8,
        "east": "Eastho",
        "eastRikishiId": "r-east",
        "heat": 80,
        "heya": "East Stable",
        "heyaId": "heya-1",
        "heyaname": "East Stable",
        "incident": "scandal",
        "loser": "Westzan",
        "loserRikishiId": "r-west",
        "rikishiId": "r-east",
        "shikona": "Eastho",
        "stableId": "heya-1",
        "status": "injured",
        "west": "Westzan",
        "westRikishiId": "r-west",
        "winner": "Eastho",
        "winnerRikishiId": "r-east",
      },
      "day": 1,
      "heyaId": "heya-1",
      "id": "EV-6C33DD1B",
      "importance": "notable",
      "month": 1,
      "phase": "weekly",
      "rikishiId": undefined,
      "scope": "heya",
      "summary": "Market dealings were settled at East Stable.",
      "tags": [
        "economy",
        "market",
      ],
      "title": "Market Activity",
      "type": "FINANCIAL_ALERT",
      "week": 5,
      "year": 2026,
    },
  ],
  "logLen": 2,
  "logTail": [
    {
      "category": "economy",
      "causalEventId": undefined,
      "data": {
        "day": 8,
        "east": "Eastho",
        "eastRikishiId": "r-east",
        "heat": 80,
        "heya": "East Stable",
        "heyaId": "heya-1",
        "heyaname": "East Stable",
        "incident": "scandal",
        "loser": "Westzan",
        "loserRikishiId": "r-west",
        "rikishiId": "r-east",
        "shikona": "Eastho",
        "stableId": "heya-1",
        "status": "injured",
        "west": "Westzan",
        "westRikishiId": "r-west",
        "winner": "Eastho",
        "winnerRikishiId": "r-east",
      },
      "day": 1,
      "heyaId": "heya-1",
      "id": "EV-E03A2854",
      "importance": "notable",
      "month": 1,
      "phase": "weekly",
      "rikishiId": undefined,
      "scope": "heya",
      "summary": "East Stable processed a loan transaction.",
      "tags": [
        "economy",
        "loan",
      ],
      "title": "Loan Activity",
      "type": "FINANCIAL_ALERT",
      "week": 5,
      "year": 2026,
    },
    {
      "category": "economy",
      "causalEventId": undefined,
      "data": {
        "day": 8,
        "east": "Eastho",
        "eastRikishiId": "r-east",
        "heat": 80,
        "heya": "East Stable",
        "heyaId": "heya-1",
        "heyaname": "East Stable",
        "incident": "scandal",
        "loser": "Westzan",
        "loserRikishiId": "r-west",
        "rikishiId": "r-east",
        "shikona": "Eastho",
        "stableId": "heya-1",
        "status": "injured",
        "west": "Westzan",
        "westRikishiId": "r-west",
        "winner": "Eastho",
        "winnerRikishiId": "r-east",
      },
      "day": 1,
      "heyaId": "heya-1",
      "id": "EV-6C33DD1B",
      "importance": "notable",
      "month": 1,
      "phase": "weekly",
      "rikishiId": undefined,
      "scope": "heya",
      "summary": "Market dealings were settled at East Stable.",
      "tags": [
        "economy",
        "market",
      ],
      "title": "Market Activity",
      "type": "FINANCIAL_ALERT",
      "week": 5,
      "year": 2026,
    },
  ],
}
`;

exports[`EventBus — golden master > financialAlert (regular + insolvency) 1`] = `
{
  "event": [
    {
      "category": "economy",
      "causalEventId": undefined,
      "data": {
        "day": 8,
        "east": "Eastho",
        "eastRikishiId": "r-east",
        "heat": 80,
        "heya": "East Stable",
        "heyaId": "heya-1",
        "heyaname": "East Stable",
        "incident": "scandal",
        "loser": "Westzan",
        "loserRikishiId": "r-west",
        "rikishiId": "r-east",
        "shikona": "Eastho",
        "stableId": "heya-1",
        "status": "injured",
        "west": "Westzan",
        "westRikishiId": "r-west",
        "winner": "Eastho",
        "winnerRikishiId": "r-east",
      },
      "day": 1,
      "heyaId": "heya-1",
      "id": "EV-0157633E",
      "importance": "major",
      "month": 1,
      "phase": "weekly",
      "rikishiId": undefined,
      "scope": "heya",
      "summary": "A routine financial accounting was completed at East Stable.",
      "tags": [
        "economy",
        "scandal",
      ],
      "title": "Financial Report",
      "type": "FINANCIAL_ALERT",
      "week": 5,
      "year": 2026,
    },
    {
      "category": "economy",
      "causalEventId": undefined,
      "data": {
        "day": 8,
        "east": "Eastho",
        "eastRikishiId": "r-east",
        "heat": 80,
        "heya": "East Stable",
        "heyaId": "heya-1",
        "heyaname": "East Stable",
        "incident": "insolvency",
        "loser": "Westzan",
        "loserRikishiId": "r-west",
        "rikishiId": "r-east",
        "shikona": "Eastho",
        "stableId": "heya-1",
        "status": "injured",
        "west": "Westzan",
        "westRikishiId": "r-west",
        "winner": "Eastho",
        "winnerRikishiId": "r-east",
      },
      "day": 1,
      "heyaId": "heya-1",
      "id": "EV-EF60617D",
      "importance": "headline",
      "month": 1,
      "phase": "weekly",
      "rikishiId": undefined,
      "scope": "heya",
      "summary": "A routine financial accounting was completed at East Stable.",
      "tags": [
        "economy",
        "insolvency",
      ],
      "title": "Accounts Settled",
      "type": "FINANCIAL_ALERT",
      "week": 5,
      "year": 2026,
    },
  ],
  "logLen": 2,
  "logTail": [
    {
      "category": "economy",
      "causalEventId": undefined,
      "data": {
        "day": 8,
        "east": "Eastho",
        "eastRikishiId": "r-east",
        "heat": 80,
        "heya": "East Stable",
        "heyaId": "heya-1",
        "heyaname": "East Stable",
        "incident": "scandal",
        "loser": "Westzan",
        "loserRikishiId": "r-west",
        "rikishiId": "r-east",
        "shikona": "Eastho",
        "stableId": "heya-1",
        "status": "injured",
        "west": "Westzan",
        "westRikishiId": "r-west",
        "winner": "Eastho",
        "winnerRikishiId": "r-east",
      },
      "day": 1,
      "heyaId": "heya-1",
      "id": "EV-0157633E",
      "importance": "major",
      "month": 1,
      "phase": "weekly",
      "rikishiId": undefined,
      "scope": "heya",
      "summary": "A routine financial accounting was completed at East Stable.",
      "tags": [
        "economy",
        "scandal",
      ],
      "title": "Financial Report",
      "type": "FINANCIAL_ALERT",
      "week": 5,
      "year": 2026,
    },
    {
      "category": "economy",
      "causalEventId": undefined,
      "data": {
        "day": 8,
        "east": "Eastho",
        "eastRikishiId": "r-east",
        "heat": 80,
        "heya": "East Stable",
        "heyaId": "heya-1",
        "heyaname": "East Stable",
        "incident": "insolvency",
        "loser": "Westzan",
        "loserRikishiId": "r-west",
        "rikishiId": "r-east",
        "shikona": "Eastho",
        "stableId": "heya-1",
        "status": "injured",
        "west": "Westzan",
        "westRikishiId": "r-west",
        "winner": "Eastho",
        "winnerRikishiId": "r-east",
      },
      "day": 1,
      "heyaId": "heya-1",
      "id": "EV-EF60617D",
      "importance": "headline",
      "month": 1,
      "phase": "weekly",
      "rikishiId": undefined,
      "scope": "heya",
      "summary": "A routine financial accounting was completed at East Stable.",
      "tags": [
        "economy",
        "insolvency",
      ],
      "title": "Accounts Settled",
      "type": "FINANCIAL_ALERT",
      "week": 5,
      "year": 2026,
    },
  ],
}
`;

exports[`EventBus — golden master > governanceRuling (default + explicit importance) 1`] = `
{
  "event": [
    {
      "category": "discipline",
      "causalEventId": undefined,
      "data": {
        "day": 8,
        "east": "Eastho",
        "eastRikishiId": "r-east",
        "heat": 80,
        "heya": "East Stable",
        "heyaId": "heya-1",
        "heyaname": "East Stable",
        "incident": "scandal",
        "loser": "Westzan",
        "loserRikishiId": "r-west",
        "rikishiId": "r-east",
        "shikona": "Eastho",
        "stableId": "heya-1",
        "status": "injured",
        "west": "Westzan",
        "westRikishiId": "r-west",
        "winner": "Eastho",
        "winnerRikishiId": "r-east",
      },
      "day": 1,
      "heyaId": "heya-1",
      "id": "EV-6D3A8491",
      "importance": "major",
      "month": 1,
      "phase": "weekly",
      "rikishiId": undefined,
      "scope": "heya",
      "summary": "The Association has reviewed and responded to a reported matter.",
      "tags": [
        "governance",
        "discipline",
      ],
      "title": "JSA Ruling Issued",
      "type": "GOVERNANCE_RULING",
      "week": 5,
      "year": 2026,
    },
    {
      "category": "discipline",
      "causalEventId": undefined,
      "data": {
        "day": 8,
        "east": "Eastho",
        "eastRikishiId": "r-east",
        "heat": 80,
        "heya": "East Stable",
        "heyaId": "heya-1",
        "heyaname": "East Stable",
        "incident": "scandal",
        "loser": "Westzan",
        "loserRikishiId": "r-west",
        "rikishiId": "r-east",
        "shikona": "Eastho",
        "stableId": "heya-1",
        "status": "injured",
        "west": "Westzan",
        "westRikishiId": "r-west",
        "winner": "Eastho",
        "winnerRikishiId": "r-east",
      },
      "day": 1,
      "heyaId": "heya-1",
      "id": "EV-6D3A8491",
      "importance": "major",
      "month": 1,
      "phase": "weekly",
      "rikishiId": undefined,
      "scope": "heya",
      "summary": "The Association has reviewed and responded to a reported matter.",
      "tags": [
        "governance",
        "discipline",
      ],
      "title": "JSA Ruling Issued",
      "type": "GOVERNANCE_RULING",
      "week": 5,
      "year": 2026,
    },
  ],
  "logLen": 1,
  "logTail": [
    {
      "category": "discipline",
      "causalEventId": undefined,
      "data": {
        "day": 8,
        "east": "Eastho",
        "eastRikishiId": "r-east",
        "heat": 80,
        "heya": "East Stable",
        "heyaId": "heya-1",
        "heyaname": "East Stable",
        "incident": "scandal",
        "loser": "Westzan",
        "loserRikishiId": "r-west",
        "rikishiId": "r-east",
        "shikona": "Eastho",
        "stableId": "heya-1",
        "status": "injured",
        "west": "Westzan",
        "westRikishiId": "r-west",
        "winner": "Eastho",
        "winnerRikishiId": "r-east",
      },
      "day": 1,
      "heyaId": "heya-1",
      "id": "EV-6D3A8491",
      "importance": "major",
      "month": 1,
      "phase": "weekly",
      "rikishiId": undefined,
      "scope": "heya",
      "summary": "The Association has reviewed and responded to a reported matter.",
      "tags": [
        "governance",
        "discipline",
      ],
      "title": "JSA Ruling Issued",
      "type": "GOVERNANCE_RULING",
      "week": 5,
      "year": 2026,
    },
  ],
}
`;

exports[`EventBus — golden master > lifecycleAction (naturalization + merger) 1`] = `
{
  "event": [
    {
      "category": "career",
      "causalEventId": undefined,
      "data": {
        "day": 8,
        "east": "Eastho",
        "eastRikishiId": "r-east",
        "heat": 80,
        "heyaname": undefined,
        "incident": "scandal",
        "loser": "Westzan",
        "loserRikishiId": "r-west",
        "rikishiId": "r-east",
        "shikona": "Eastho",
        "status": "injured",
        "west": "Westzan",
        "westRikishiId": "r-west",
        "winner": "Eastho",
        "winnerRikishiId": "r-east",
      },
      "day": 1,
      "heyaId": undefined,
      "id": "EV-EF27D953",
      "importance": "major",
      "month": 1,
      "phase": "weekly",
      "rikishiId": "r-east",
      "scope": "rikishi",
      "summary": "[[rikishi:r-east:Eastho]] has officially completed the naturalization process, securing his future in the Association.",
      "tags": [
        "lifecycle",
        "naturalization",
      ],
      "title": "Naturalization: [[rikishi:r-east:Eastho]]",
      "type": "LIFECYCLE_EVENT",
      "week": 5,
      "year": 2026,
    },
    {
      "category": "career",
      "causalEventId": undefined,
      "data": {
        "day": 8,
        "east": "Eastho",
        "eastRikishiId": "r-east",
        "heat": 80,
        "heyaname": undefined,
        "incident": "scandal",
        "loser": "Westzan",
        "loserRikishiId": "r-west",
        "rikishiId": undefined,
        "status": "injured",
        "west": "Westzan",
        "westRikishiId": "r-west",
        "winner": "Eastho",
        "winnerRikishiId": "r-east",
      },
      "day": 1,
      "heyaId": undefined,
      "id": "EV-BC4DF2FD",
      "importance": "major",
      "month": 1,
      "phase": "weekly",
      "rikishiId": undefined,
      "scope": "heya",
      "summary": "Administrative shift: [MISSING: HEYANAME] has completed a merger process.",
      "tags": [
        "lifecycle",
        "merger",
      ],
      "title": "Heya Reorganization",
      "type": "LIFECYCLE_EVENT",
      "week": 5,
      "year": 2026,
    },
  ],
  "logLen": 2,
  "logTail": [
    {
      "category": "career",
      "causalEventId": undefined,
      "data": {
        "day": 8,
        "east": "Eastho",
        "eastRikishiId": "r-east",
        "heat": 80,
        "heyaname": undefined,
        "incident": "scandal",
        "loser": "Westzan",
        "loserRikishiId": "r-west",
        "rikishiId": "r-east",
        "shikona": "Eastho",
        "status": "injured",
        "west": "Westzan",
        "westRikishiId": "r-west",
        "winner": "Eastho",
        "winnerRikishiId": "r-east",
      },
      "day": 1,
      "heyaId": undefined,
      "id": "EV-EF27D953",
      "importance": "major",
      "month": 1,
      "phase": "weekly",
      "rikishiId": "r-east",
      "scope": "rikishi",
      "summary": "[[rikishi:r-east:Eastho]] has officially completed the naturalization process, securing his future in the Association.",
      "tags": [
        "lifecycle",
        "naturalization",
      ],
      "title": "Naturalization: [[rikishi:r-east:Eastho]]",
      "type": "LIFECYCLE_EVENT",
      "week": 5,
      "year": 2026,
    },
    {
      "category": "career",
      "causalEventId": undefined,
      "data": {
        "day": 8,
        "east": "Eastho",
        "eastRikishiId": "r-east",
        "heat": 80,
        "heyaname": undefined,
        "incident": "scandal",
        "loser": "Westzan",
        "loserRikishiId": "r-west",
        "rikishiId": undefined,
        "status": "injured",
        "west": "Westzan",
        "westRikishiId": "r-west",
        "winner": "Eastho",
        "winnerRikishiId": "r-east",
      },
      "day": 1,
      "heyaId": undefined,
      "id": "EV-BC4DF2FD",
      "importance": "major",
      "month": 1,
      "phase": "weekly",
      "rikishiId": undefined,
      "scope": "heya",
      "summary": "Administrative shift: [MISSING: HEYANAME] has completed a merger process.",
      "tags": [
        "lifecycle",
        "merger",
      ],
      "title": "Heya Reorganization",
      "type": "LIFECYCLE_EVENT",
      "week": 5,
      "year": 2026,
    },
  ],
}
`;

exports[`EventBus — golden master > lifecycleEvent (injury + retirement importance switch) 1`] = `
{
  "event": [
    {
      "category": "career",
      "causalEventId": undefined,
      "data": {
        "day": 8,
        "east": "Eastho",
        "eastRikishiId": "r-east",
        "heat": 80,
        "heyaname": undefined,
        "incident": "scandal",
        "loser": "Westzan",
        "loserRikishiId": "r-west",
        "rikishiId": "r-east",
        "shikona": "Eastho",
        "status": "injured",
        "west": "Westzan",
        "westRikishiId": "r-west",
        "winner": "Eastho",
        "winnerRikishiId": "r-east",
      },
      "day": 1,
      "heyaId": undefined,
      "id": "EV-1668CC6B",
      "importance": "notable",
      "month": 1,
      "phase": "weekly",
      "rikishiId": "r-east",
      "scope": "rikishi",
      "summary": "A significant event in the career of [[rikishi:r-east:Eastho]].",
      "tags": [
        "career",
        "injured",
      ],
      "title": "Career Milestone",
      "type": "LIFECYCLE_EVENT",
      "week": 5,
      "year": 2026,
    },
    {
      "category": "career",
      "causalEventId": undefined,
      "data": {
        "day": 8,
        "east": "Eastho",
        "eastRikishiId": "r-east",
        "heat": 80,
        "heyaname": undefined,
        "incident": "scandal",
        "loser": "Westzan",
        "loserRikishiId": "r-west",
        "rikishiId": "r-east",
        "shikona": "Eastho",
        "status": "injured",
        "west": "Westzan",
        "westRikishiId": "r-west",
        "winner": "Eastho",
        "winnerRikishiId": "r-east",
      },
      "day": 1,
      "heyaId": undefined,
      "id": "EV-1668CC6B",
      "importance": "notable",
      "month": 1,
      "phase": "weekly",
      "rikishiId": "r-east",
      "scope": "rikishi",
      "summary": "A significant event in the career of [[rikishi:r-east:Eastho]].",
      "tags": [
        "career",
        "injured",
      ],
      "title": "Career Milestone",
      "type": "LIFECYCLE_EVENT",
      "week": 5,
      "year": 2026,
    },
  ],
  "logLen": 1,
  "logTail": [
    {
      "category": "career",
      "causalEventId": undefined,
      "data": {
        "day": 8,
        "east": "Eastho",
        "eastRikishiId": "r-east",
        "heat": 80,
        "heyaname": undefined,
        "incident": "scandal",
        "loser": "Westzan",
        "loserRikishiId": "r-west",
        "rikishiId": "r-east",
        "shikona": "Eastho",
        "status": "injured",
        "west": "Westzan",
        "westRikishiId": "r-west",
        "winner": "Eastho",
        "winnerRikishiId": "r-east",
      },
      "day": 1,
      "heyaId": undefined,
      "id": "EV-1668CC6B",
      "importance": "notable",
      "month": 1,
      "phase": "weekly",
      "rikishiId": "r-east",
      "scope": "rikishi",
      "summary": "A significant event in the career of [[rikishi:r-east:Eastho]].",
      "tags": [
        "career",
        "injured",
      ],
      "title": "Career Milestone",
      "type": "LIFECYCLE_EVENT",
      "week": 5,
      "year": 2026,
    },
  ],
}
`;

exports[`EventBus — golden master > managementDecision (default + explicit importance) 1`] = `
{
  "event": [
    {
      "category": "training",
      "causalEventId": undefined,
      "data": {
        "day": 8,
        "east": "Eastho",
        "eastRikishiId": "r-east",
        "heat": 80,
        "heya": "East Stable",
        "heyaId": "heya-1",
        "heyaname": "East Stable",
        "incident": "scandal",
        "loser": "Westzan",
        "loserRikishiId": "r-west",
        "rikishiId": "r-east",
        "shikona": "Eastho",
        "stableId": "heya-1",
        "status": "injured",
        "west": "Westzan",
        "westRikishiId": "r-west",
        "winner": "Eastho",
        "winnerRikishiId": "r-east",
      },
      "day": 1,
      "heyaId": "heya-1",
      "id": "EV-4A9850F1",
      "importance": "minor",
      "month": 1,
      "phase": "weekly",
      "rikishiId": undefined,
      "scope": "heya",
      "summary": "East Stable's leadership settled on a course of action.",
      "tags": [
        "management",
        "strategy",
      ],
      "title": "Directive Issued",
      "type": "NPC_MANAGER_DECISION",
      "week": 5,
      "year": 2026,
    },
    {
      "category": "training",
      "causalEventId": undefined,
      "data": {
        "day": 8,
        "east": "Eastho",
        "eastRikishiId": "r-east",
        "heat": 80,
        "heya": "East Stable",
        "heyaId": "heya-1",
        "heyaname": "East Stable",
        "incident": "scandal",
        "loser": "Westzan",
        "loserRikishiId": "r-west",
        "rikishiId": "r-east",
        "shikona": "Eastho",
        "stableId": "heya-1",
        "status": "injured",
        "west": "Westzan",
        "westRikishiId": "r-west",
        "winner": "Eastho",
        "winnerRikishiId": "r-east",
      },
      "day": 1,
      "heyaId": "heya-1",
      "id": "EV-4A9850F1",
      "importance": "minor",
      "month": 1,
      "phase": "weekly",
      "rikishiId": undefined,
      "scope": "heya",
      "summary": "East Stable's leadership settled on a course of action.",
      "tags": [
        "management",
        "strategy",
      ],
      "title": "Directive Issued",
      "type": "NPC_MANAGER_DECISION",
      "week": 5,
      "year": 2026,
    },
  ],
  "logLen": 1,
  "logTail": [
    {
      "category": "training",
      "causalEventId": undefined,
      "data": {
        "day": 8,
        "east": "Eastho",
        "eastRikishiId": "r-east",
        "heat": 80,
        "heya": "East Stable",
        "heyaId": "heya-1",
        "heyaname": "East Stable",
        "incident": "scandal",
        "loser": "Westzan",
        "loserRikishiId": "r-west",
        "rikishiId": "r-east",
        "shikona": "Eastho",
        "stableId": "heya-1",
        "status": "injured",
        "west": "Westzan",
        "westRikishiId": "r-west",
        "winner": "Eastho",
        "winnerRikishiId": "r-east",
      },
      "day": 1,
      "heyaId": "heya-1",
      "id": "EV-4A9850F1",
      "importance": "minor",
      "month": 1,
      "phase": "weekly",
      "rikishiId": undefined,
      "scope": "heya",
      "summary": "East Stable's leadership settled on a course of action.",
      "tags": [
        "management",
        "strategy",
      ],
      "title": "Directive Issued",
      "type": "NPC_MANAGER_DECISION",
      "week": 5,
      "year": 2026,
    },
  ],
}
`;

exports[`EventBus — golden master > medicalReportBase 1`] = `
{
  "event": {
    "category": "injury",
    "causalEventId": undefined,
    "data": {
      "day": 8,
      "east": "Eastho",
      "eastRikishiId": "r-east",
      "heat": 80,
      "heyaname": undefined,
      "incident": "scandal",
      "loser": "Westzan",
      "loserRikishiId": "r-west",
      "rikishiId": "r-east",
      "shikona": "Eastho",
      "status": "injured",
      "west": "Westzan",
      "westRikishiId": "r-west",
      "winner": "Eastho",
      "winnerRikishiId": "r-east",
    },
    "day": 1,
    "heyaId": undefined,
    "id": "EV-43040F59",
    "importance": "major",
    "month": 1,
    "phase": "weekly",
    "rikishiId": "r-east",
    "scope": "rikishi",
    "summary": "[[rikishi:r-east:Eastho]]'s condition was reviewed — status: injured.",
    "tags": [
      "medical",
      "injured",
    ],
    "title": "Medical Report",
    "type": "MEDICAL_REPORT",
    "week": 5,
    "year": 2026,
  },
  "logLen": 1,
  "logTail": [
    {
      "category": "injury",
      "causalEventId": undefined,
      "data": {
        "day": 8,
        "east": "Eastho",
        "eastRikishiId": "r-east",
        "heat": 80,
        "heyaname": undefined,
        "incident": "scandal",
        "loser": "Westzan",
        "loserRikishiId": "r-west",
        "rikishiId": "r-east",
        "shikona": "Eastho",
        "status": "injured",
        "west": "Westzan",
        "westRikishiId": "r-west",
        "winner": "Eastho",
        "winnerRikishiId": "r-east",
      },
      "day": 1,
      "heyaId": undefined,
      "id": "EV-43040F59",
      "importance": "major",
      "month": 1,
      "phase": "weekly",
      "rikishiId": "r-east",
      "scope": "rikishi",
      "summary": "[[rikishi:r-east:Eastho]]'s condition was reviewed — status: injured.",
      "tags": [
        "medical",
        "injured",
      ],
      "title": "Medical Report",
      "type": "MEDICAL_REPORT",
      "week": 5,
      "year": 2026,
    },
  ],
}
`;

exports[`EventBus — golden master > monthlyFinanceReport 1`] = `
{
  "event": {
    "category": "economy",
    "causalEventId": undefined,
    "data": {
      "day": 8,
      "east": "Eastho",
      "eastRikishiId": "r-east",
      "heat": 80,
      "heya": "East Stable",
      "heyaname": "East Stable",
      "incident": "scandal",
      "loser": "Westzan",
      "loserRikishiId": "r-west",
      "rikishiId": "r-east",
      "shikona": "Eastho",
      "status": "injured",
      "west": "Westzan",
      "westRikishiId": "r-west",
      "winner": "Eastho",
      "winnerRikishiId": "r-east",
    },
    "day": 1,
    "heyaId": undefined,
    "id": "EV-D8F5D3A2",
    "importance": "notable",
    "month": 1,
    "phase": "monthly",
    "rikishiId": undefined,
    "scope": "heya",
    "summary": "Sponsor interest shifted around East Stable this month.",
    "tags": [
      "economy",
      "finance",
    ],
    "title": "Financial Report",
    "type": "MONTHLY_FINANCE_REPORT",
    "week": 5,
    "year": 2026,
  },
  "logLen": 1,
  "logTail": [
    {
      "category": "economy",
      "causalEventId": undefined,
      "data": {
        "day": 8,
        "east": "Eastho",
        "eastRikishiId": "r-east",
        "heat": 80,
        "heya": "East Stable",
        "heyaname": "East Stable",
        "incident": "scandal",
        "loser": "Westzan",
        "loserRikishiId": "r-west",
        "rikishiId": "r-east",
        "shikona": "Eastho",
        "status": "injured",
        "west": "Westzan",
        "westRikishiId": "r-west",
        "winner": "Eastho",
        "winnerRikishiId": "r-east",
      },
      "day": 1,
      "heyaId": undefined,
      "id": "EV-D8F5D3A2",
      "importance": "notable",
      "month": 1,
      "phase": "monthly",
      "rikishiId": undefined,
      "scope": "heya",
      "summary": "Sponsor interest shifted around East Stable this month.",
      "tags": [
        "economy",
        "finance",
      ],
      "title": "Financial Report",
      "type": "MONTHLY_FINANCE_REPORT",
      "week": 5,
      "year": 2026,
    },
  ],
}
`;

exports[`EventBus — golden master > oyakataMoodShift 1`] = `
{
  "event": {
    "category": "narrative",
    "causalEventId": undefined,
    "data": {
      "day": 8,
      "east": "Eastho",
      "eastRikishiId": "r-east",
      "heat": 80,
      "heya": "East Stable",
      "heyaId": "heya-1",
      "heyaname": "East Stable",
      "incident": "scandal",
      "loser": "Westzan",
      "loserRikishiId": "r-west",
      "rikishiId": "r-east",
      "shikona": "Eastho",
      "stableId": "heya-1",
      "status": "injured",
      "west": "Westzan",
      "westRikishiId": "r-west",
      "winner": "Eastho",
      "winnerRikishiId": "r-east",
    },
    "day": 1,
    "heyaId": "heya-1",
    "id": "EV-6AE8CABB",
    "importance": "major",
    "month": 1,
    "phase": "weekly",
    "rikishiId": undefined,
    "scope": "heya",
    "summary": "Those close to East Stable report its master is in a different frame of mind.",
    "tags": [
      "narrative",
      "mood",
    ],
    "title": "Oyakata Mood Shift",
    "type": "OYAKATA_MOOD_SHIFT",
    "week": 5,
    "year": 2026,
  },
  "logLen": 1,
  "logTail": [
    {
      "category": "narrative",
      "causalEventId": undefined,
      "data": {
        "day": 8,
        "east": "Eastho",
        "eastRikishiId": "r-east",
        "heat": 80,
        "heya": "East Stable",
        "heyaId": "heya-1",
        "heyaname": "East Stable",
        "incident": "scandal",
        "loser": "Westzan",
        "loserRikishiId": "r-west",
        "rikishiId": "r-east",
        "shikona": "Eastho",
        "stableId": "heya-1",
        "status": "injured",
        "west": "Westzan",
        "westRikishiId": "r-west",
        "winner": "Eastho",
        "winnerRikishiId": "r-east",
      },
      "day": 1,
      "heyaId": "heya-1",
      "id": "EV-6AE8CABB",
      "importance": "major",
      "month": 1,
      "phase": "weekly",
      "rikishiId": undefined,
      "scope": "heya",
      "summary": "Those close to East Stable report its master is in a different frame of mind.",
      "tags": [
        "narrative",
        "mood",
      ],
      "title": "Oyakata Mood Shift",
      "type": "OYAKATA_MOOD_SHIFT",
      "week": 5,
      "year": 2026,
    },
  ],
}
`;

exports[`EventBus — golden master > prestigeEvent 1`] = `
{
  "event": {
    "category": "milestone",
    "causalEventId": undefined,
    "data": {
      "day": 8,
      "east": "Eastho",
      "eastRikishiId": "r-east",
      "heat": 80,
      "heya": "East Stable",
      "heyaId": "heya-1",
      "heyaname": "East Stable",
      "incident": "scandal",
      "loser": "Westzan",
      "loserRikishiId": "r-west",
      "rikishiId": "r-east",
      "shikona": "Eastho",
      "stableId": "heya-1",
      "status": "injured",
      "west": "Westzan",
      "westRikishiId": "r-west",
      "winner": "Eastho",
      "winnerRikishiId": "r-east",
    },
    "day": 1,
    "heyaId": "heya-1",
    "id": "EV-0F2DDC05",
    "importance": "notable",
    "month": 1,
    "phase": "weekly",
    "rikishiId": undefined,
    "scope": "heya",
    "summary": "A milestone for East Stable — its prestige is evolving.",
    "tags": [
      "prestige",
      "milestone",
    ],
    "title": "Standing Shift",
    "type": "AWARD_CONFERRED",
    "week": 5,
    "year": 2026,
  },
  "logLen": 1,
  "logTail": [
    {
      "category": "milestone",
      "causalEventId": undefined,
      "data": {
        "day": 8,
        "east": "Eastho",
        "eastRikishiId": "r-east",
        "heat": 80,
        "heya": "East Stable",
        "heyaId": "heya-1",
        "heyaname": "East Stable",
        "incident": "scandal",
        "loser": "Westzan",
        "loserRikishiId": "r-west",
        "rikishiId": "r-east",
        "shikona": "Eastho",
        "stableId": "heya-1",
        "status": "injured",
        "west": "Westzan",
        "westRikishiId": "r-west",
        "winner": "Eastho",
        "winnerRikishiId": "r-east",
      },
      "day": 1,
      "heyaId": "heya-1",
      "id": "EV-0F2DDC05",
      "importance": "notable",
      "month": 1,
      "phase": "weekly",
      "rikishiId": undefined,
      "scope": "heya",
      "summary": "A milestone for East Stable — its prestige is evolving.",
      "tags": [
        "prestige",
        "milestone",
      ],
      "title": "Standing Shift",
      "type": "AWARD_CONFERRED",
      "week": 5,
      "year": 2026,
    },
  ],
}
`;

exports[`EventBus — golden master > recruitDiscovered 1`] = `
{
  "event": {
    "category": "scouting",
    "causalEventId": undefined,
    "data": {
      "day": 8,
      "east": "Eastho",
      "eastRikishiId": "r-east",
      "heat": 80,
      "heyaname": undefined,
      "incident": "scandal",
      "loser": "Westzan",
      "loserRikishiId": "r-west",
      "rikishiId": "r-east",
      "shikona": "Eastho",
      "status": "injured",
      "west": "Westzan",
      "westRikishiId": "r-west",
      "winner": "Eastho",
      "winnerRikishiId": "r-east",
    },
    "day": 1,
    "heyaId": undefined,
    "id": "EV-416D9E4C",
    "importance": "notable",
    "month": 1,
    "phase": "weekly",
    "rikishiId": "r-east",
    "scope": "world",
    "summary": "A new prospect, [[rikishi:r-east:Eastho]], enters the pipeline at [MISSING: HEYANAME].",
    "tags": [
      "scouting",
      "recruitment",
    ],
    "title": "New Recruit Signed",
    "type": "RECRUIT_DISCOVERED",
    "week": 5,
    "year": 2026,
  },
  "logLen": 1,
  "logTail": [
    {
      "category": "scouting",
      "causalEventId": undefined,
      "data": {
        "day": 8,
        "east": "Eastho",
        "eastRikishiId": "r-east",
        "heat": 80,
        "heyaname": undefined,
        "incident": "scandal",
        "loser": "Westzan",
        "loserRikishiId": "r-west",
        "rikishiId": "r-east",
        "shikona": "Eastho",
        "status": "injured",
        "west": "Westzan",
        "westRikishiId": "r-west",
        "winner": "Eastho",
        "winnerRikishiId": "r-east",
      },
      "day": 1,
      "heyaId": undefined,
      "id": "EV-416D9E4C",
      "importance": "notable",
      "month": 1,
      "phase": "weekly",
      "rikishiId": "r-east",
      "scope": "world",
      "summary": "A new prospect, [[rikishi:r-east:Eastho]], enters the pipeline at [MISSING: HEYANAME].",
      "tags": [
        "scouting",
        "recruitment",
      ],
      "title": "New Recruit Signed",
      "type": "RECRUIT_DISCOVERED",
      "week": 5,
      "year": 2026,
    },
  ],
}
`;

exports[`EventBus — golden master > rivalryHeatSpike (heat<=75 vs >75 importance) 1`] = `
{
  "event": [
    {
      "category": "rivalry",
      "causalEventId": undefined,
      "data": {
        "day": 8,
        "east": "Eastho",
        "eastRikishiId": "r-east",
        "heat": 50,
        "heyaname": undefined,
        "incident": "scandal",
        "loser": "Westzan",
        "loserId": "r-west",
        "loserRikishiId": "r-west",
        "rikishiId": "r-east",
        "shikona": "Eastho",
        "status": "injured",
        "west": "Westzan",
        "westRikishiId": "r-west",
        "winner": "Eastho",
        "winnerId": "r-east",
        "winnerRikishiId": "r-east",
      },
      "day": 1,
      "heyaId": undefined,
      "id": "EV-80773193",
      "importance": "notable",
      "month": 1,
      "phase": "weekly",
      "rikishiId": undefined,
      "scope": "world",
      "summary": "Whispers in the keiko-ba suggest this rivalry has become intensely personal after [[rikishi:r-east:Eastho]]'s victory.",
      "tags": [
        "rivalry",
        "hype",
      ],
      "title": "Heat Spike: [[rikishi:r-east:Eastho]] Defeats [MISSING: RIVAL]",
      "type": "RIVALRY_HEAT_SPIKE",
      "week": 5,
      "year": 2026,
    },
    {
      "category": "rivalry",
      "causalEventId": undefined,
      "data": {
        "day": 8,
        "east": "Eastho",
        "eastRikishiId": "r-east",
        "heat": 50,
        "heyaname": undefined,
        "incident": "scandal",
        "loser": "Westzan",
        "loserId": "r-west",
        "loserRikishiId": "r-west",
        "rikishiId": "r-east",
        "shikona": "Eastho",
        "status": "injured",
        "west": "Westzan",
        "westRikishiId": "r-west",
        "winner": "Eastho",
        "winnerId": "r-east",
        "winnerRikishiId": "r-east",
      },
      "day": 1,
      "heyaId": undefined,
      "id": "EV-80773193",
      "importance": "notable",
      "month": 1,
      "phase": "weekly",
      "rikishiId": undefined,
      "scope": "world",
      "summary": "Whispers in the keiko-ba suggest this rivalry has become intensely personal after [[rikishi:r-east:Eastho]]'s victory.",
      "tags": [
        "rivalry",
        "hype",
      ],
      "title": "Heat Spike: [[rikishi:r-east:Eastho]] Defeats [MISSING: RIVAL]",
      "type": "RIVALRY_HEAT_SPIKE",
      "week": 5,
      "year": 2026,
    },
  ],
  "logLen": 1,
  "logTail": [
    {
      "category": "rivalry",
      "causalEventId": undefined,
      "data": {
        "day": 8,
        "east": "Eastho",
        "eastRikishiId": "r-east",
        "heat": 50,
        "heyaname": undefined,
        "incident": "scandal",
        "loser": "Westzan",
        "loserId": "r-west",
        "loserRikishiId": "r-west",
        "rikishiId": "r-east",
        "shikona": "Eastho",
        "status": "injured",
        "west": "Westzan",
        "westRikishiId": "r-west",
        "winner": "Eastho",
        "winnerId": "r-east",
        "winnerRikishiId": "r-east",
      },
      "day": 1,
      "heyaId": undefined,
      "id": "EV-80773193",
      "importance": "notable",
      "month": 1,
      "phase": "weekly",
      "rikishiId": undefined,
      "scope": "world",
      "summary": "Whispers in the keiko-ba suggest this rivalry has become intensely personal after [[rikishi:r-east:Eastho]]'s victory.",
      "tags": [
        "rivalry",
        "hype",
      ],
      "title": "Heat Spike: [[rikishi:r-east:Eastho]] Defeats [MISSING: RIVAL]",
      "type": "RIVALRY_HEAT_SPIKE",
      "week": 5,
      "year": 2026,
    },
  ],
}
`;

exports[`EventBus — golden master > rosterEvent 1`] = `
{
  "event": {
    "category": "career",
    "causalEventId": undefined,
    "data": {
      "day": 8,
      "east": "Eastho",
      "eastRikishiId": "r-east",
      "heat": 80,
      "heya": "East Stable",
      "heyaId": "heya-1",
      "heyaname": "East Stable",
      "incident": "scandal",
      "loser": "Westzan",
      "loserRikishiId": "r-west",
      "rikishiId": "r-east",
      "shikona": "Eastho",
      "stableId": "heya-1",
      "status": "injured",
      "west": "Westzan",
      "westRikishiId": "r-west",
      "winner": "Eastho",
      "winnerRikishiId": "r-east",
    },
    "day": 1,
    "heyaId": "heya-1",
    "id": "EV-88D02AFF",
    "importance": "major",
    "month": 1,
    "phase": "weekly",
    "rikishiId": "r-east",
    "scope": "heya",
    "summary": "Roster pressure forced East Stable to part ways with [[rikishi:r-east:Eastho]].",
    "tags": [
      "roster",
      "release",
    ],
    "title": "Roster Adjustment",
    "type": "ROSTER_OVERFLOW_RELEASE",
    "week": 5,
    "year": 2026,
  },
  "logLen": 1,
  "logTail": [
    {
      "category": "career",
      "causalEventId": undefined,
      "data": {
        "day": 8,
        "east": "Eastho",
        "eastRikishiId": "r-east",
        "heat": 80,
        "heya": "East Stable",
        "heyaId": "heya-1",
        "heyaname": "East Stable",
        "incident": "scandal",
        "loser": "Westzan",
        "loserRikishiId": "r-west",
        "rikishiId": "r-east",
        "shikona": "Eastho",
        "stableId": "heya-1",
        "status": "injured",
        "west": "Westzan",
        "westRikishiId": "r-west",
        "winner": "Eastho",
        "winnerRikishiId": "r-east",
      },
      "day": 1,
      "heyaId": "heya-1",
      "id": "EV-88D02AFF",
      "importance": "major",
      "month": 1,
      "phase": "weekly",
      "rikishiId": "r-east",
      "scope": "heya",
      "summary": "Roster pressure forced East Stable to part ways with [[rikishi:r-east:Eastho]].",
      "tags": [
        "roster",
        "release",
      ],
      "title": "Roster Adjustment",
      "type": "ROSTER_OVERFLOW_RELEASE",
      "week": 5,
      "year": 2026,
    },
  ],
}
`;

exports[`EventBus — golden master > strategyShift 1`] = `
{
  "event": {
    "category": "narrative",
    "causalEventId": undefined,
    "data": {
      "day": 8,
      "east": "Eastho",
      "eastRikishiId": "r-east",
      "heat": 80,
      "heya": "East Stable",
      "heyaId": "heya-1",
      "heyaname": "East Stable",
      "incident": "scandal",
      "loser": "Westzan",
      "loserRikishiId": "r-west",
      "rikishiId": "r-east",
      "shikona": "Eastho",
      "stableId": "heya-1",
      "status": "injured",
      "west": "Westzan",
      "westRikishiId": "r-west",
      "winner": "Eastho",
      "winnerRikishiId": "r-east",
    },
    "day": 1,
    "heyaId": "heya-1",
    "id": "EV-E71FBD66",
    "importance": "major",
    "month": 1,
    "phase": "weekly",
    "rikishiId": undefined,
    "scope": "world",
    "summary": "A tactical reorientation is underway at East Stable.",
    "tags": [
      "narrative",
      "strategy",
    ],
    "title": "New Direction",
    "type": "NARRATIVE_STRATEGY_SHIFT",
    "week": 5,
    "year": 2026,
  },
  "logLen": 1,
  "logTail": [
    {
      "category": "narrative",
      "causalEventId": undefined,
      "data": {
        "day": 8,
        "east": "Eastho",
        "eastRikishiId": "r-east",
        "heat": 80,
        "heya": "East Stable",
        "heyaId": "heya-1",
        "heyaname": "East Stable",
        "incident": "scandal",
        "loser": "Westzan",
        "loserRikishiId": "r-west",
        "rikishiId": "r-east",
        "shikona": "Eastho",
        "stableId": "heya-1",
        "status": "injured",
        "west": "Westzan",
        "westRikishiId": "r-west",
        "winner": "Eastho",
        "winnerRikishiId": "r-east",
      },
      "day": 1,
      "heyaId": "heya-1",
      "id": "EV-E71FBD66",
      "importance": "major",
      "month": 1,
      "phase": "weekly",
      "rikishiId": undefined,
      "scope": "world",
      "summary": "A tactical reorientation is underway at East Stable.",
      "tags": [
        "narrative",
        "strategy",
      ],
      "title": "New Direction",
      "type": "NARRATIVE_STRATEGY_SHIFT",
      "week": 5,
      "year": 2026,
    },
  ],
}
`;

exports[`EventBus — golden master > trainingUpdate 1`] = `
{
  "event": {
    "category": "training",
    "causalEventId": undefined,
    "data": {
      "day": 8,
      "east": "Eastho",
      "eastRikishiId": "r-east",
      "heat": 80,
      "heyaname": undefined,
      "incident": "scandal",
      "loser": "Westzan",
      "loserRikishiId": "r-west",
      "rikishiId": "r-east",
      "shikona": "Eastho",
      "status": "injured",
      "west": "Westzan",
      "westRikishiId": "r-west",
      "winner": "Eastho",
      "winnerRikishiId": "r-east",
    },
    "day": 1,
    "heyaId": undefined,
    "id": "EV-BC46499C",
    "importance": "notable",
    "month": 1,
    "phase": "weekly",
    "rikishiId": "r-east",
    "scope": "rikishi",
    "summary": "Steady improvement observed for [[rikishi:r-east:Eastho]] this week.",
    "tags": [
      "training",
    ],
    "title": "[[rikishi:r-east:Eastho]]: Training Progress",
    "type": "TRAINING_UPDATE",
    "week": 5,
    "year": 2026,
  },
  "logLen": 1,
  "logTail": [
    {
      "category": "training",
      "causalEventId": undefined,
      "data": {
        "day": 8,
        "east": "Eastho",
        "eastRikishiId": "r-east",
        "heat": 80,
        "heyaname": undefined,
        "incident": "scandal",
        "loser": "Westzan",
        "loserRikishiId": "r-west",
        "rikishiId": "r-east",
        "shikona": "Eastho",
        "status": "injured",
        "west": "Westzan",
        "westRikishiId": "r-west",
        "winner": "Eastho",
        "winnerRikishiId": "r-east",
      },
      "day": 1,
      "heyaId": undefined,
      "id": "EV-BC46499C",
      "importance": "notable",
      "month": 1,
      "phase": "weekly",
      "rikishiId": "r-east",
      "scope": "rikishi",
      "summary": "Steady improvement observed for [[rikishi:r-east:Eastho]] this week.",
      "tags": [
        "training",
      ],
      "title": "[[rikishi:r-east:Eastho]]: Training Progress",
      "type": "TRAINING_UPDATE",
      "week": 5,
      "year": 2026,
    },
  ],
}
`;

exports[`EventBus — golden master > welfareCompliance (warning + sanctioned) 1`] = `
{
  "event": [
    {
      "category": "welfare",
      "causalEventId": undefined,
      "data": {
        "day": 8,
        "east": "Eastho",
        "eastRikishiId": "r-east",
        "heat": 80,
        "heya": "East Stable",
        "heyaId": "heya-1",
        "heyaname": "East Stable",
        "incident": "scandal",
        "loser": "Westzan",
        "loserRikishiId": "r-west",
        "rikishiId": "r-east",
        "shikona": "Eastho",
        "stableId": "heya-1",
        "status": "warning",
        "west": "Westzan",
        "westRikishiId": "r-west",
        "winner": "Eastho",
        "winnerRikishiId": "r-east",
      },
      "day": 1,
      "heyaId": "heya-1",
      "id": "EV-89CAD024",
      "importance": "major",
      "month": 1,
      "phase": "weekly",
      "rikishiId": undefined,
      "scope": "heya",
      "summary": "East Stable's welfare compliance status was updated: warning.",
      "tags": [
        "welfare",
        "warning",
      ],
      "title": "Compliance Notice",
      "type": "WELFARE_COMPLIANCE",
      "week": 5,
      "year": 2026,
    },
    {
      "category": "welfare",
      "causalEventId": undefined,
      "data": {
        "day": 8,
        "east": "Eastho",
        "eastRikishiId": "r-east",
        "heat": 80,
        "heya": "East Stable",
        "heyaId": "heya-1",
        "heyaname": "East Stable",
        "incident": "scandal",
        "loser": "Westzan",
        "loserRikishiId": "r-west",
        "rikishiId": "r-east",
        "shikona": "Eastho",
        "stableId": "heya-1",
        "status": "sanctioned",
        "west": "Westzan",
        "westRikishiId": "r-west",
        "winner": "Eastho",
        "winnerRikishiId": "r-east",
      },
      "day": 1,
      "heyaId": "heya-1",
      "id": "EV-37DF875B",
      "importance": "headline",
      "month": 1,
      "phase": "weekly",
      "rikishiId": undefined,
      "scope": "heya",
      "summary": "A welfare review at East Stable concluded — status: sanctioned.",
      "tags": [
        "welfare",
        "sanctioned",
      ],
      "title": "Welfare Update",
      "type": "WELFARE_COMPLIANCE",
      "week": 5,
      "year": 2026,
    },
  ],
  "logLen": 2,
  "logTail": [
    {
      "category": "welfare",
      "causalEventId": undefined,
      "data": {
        "day": 8,
        "east": "Eastho",
        "eastRikishiId": "r-east",
        "heat": 80,
        "heya": "East Stable",
        "heyaId": "heya-1",
        "heyaname": "East Stable",
        "incident": "scandal",
        "loser": "Westzan",
        "loserRikishiId": "r-west",
        "rikishiId": "r-east",
        "shikona": "Eastho",
        "stableId": "heya-1",
        "status": "warning",
        "west": "Westzan",
        "westRikishiId": "r-west",
        "winner": "Eastho",
        "winnerRikishiId": "r-east",
      },
      "day": 1,
      "heyaId": "heya-1",
      "id": "EV-89CAD024",
      "importance": "major",
      "month": 1,
      "phase": "weekly",
      "rikishiId": undefined,
      "scope": "heya",
      "summary": "East Stable's welfare compliance status was updated: warning.",
      "tags": [
        "welfare",
        "warning",
      ],
      "title": "Compliance Notice",
      "type": "WELFARE_COMPLIANCE",
      "week": 5,
      "year": 2026,
    },
    {
      "category": "welfare",
      "causalEventId": undefined,
      "data": {
        "day": 8,
        "east": "Eastho",
        "eastRikishiId": "r-east",
        "heat": 80,
        "heya": "East Stable",
        "heyaId": "heya-1",
        "heyaname": "East Stable",
        "incident": "scandal",
        "loser": "Westzan",
        "loserRikishiId": "r-west",
        "rikishiId": "r-east",
        "shikona": "Eastho",
        "stableId": "heya-1",
        "status": "sanctioned",
        "west": "Westzan",
        "westRikishiId": "r-west",
        "winner": "Eastho",
        "winnerRikishiId": "r-east",
      },
      "day": 1,
      "heyaId": "heya-1",
      "id": "EV-37DF875B",
      "importance": "headline",
      "month": 1,
      "phase": "weekly",
      "rikishiId": undefined,
      "scope": "heya",
      "summary": "A welfare review at East Stable concluded — status: sanctioned.",
      "tags": [
        "welfare",
        "sanctioned",
      ],
      "title": "Welfare Update",
      "type": "WELFARE_COMPLIANCE",
      "week": 5,
      "year": 2026,
    },
  ],
}
`;
